--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@capacitor/ios": "4.7.1",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/preferences": "^4.0.2",
+    "@capacitor/share": "^4.1.1",
     "@capacitor/splash-screen": "^4.2.0",
     "@capacitor/status-bar": "4.1.1",
+    "@capacitor/text-zoom": "^4.1.0",
     "@ionic/angular": "^6.1.9",
     "airtable": "^0.11.6",
     "axios": "^1.3.5",
