--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^15.0.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.7.1",
-    "@capacitor/haptics": "4.1.0",
+    "@capacitor/haptics": "^4.1.0",
     "@capacitor/ios": "4.7.1",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/preferences": "^4.0.2",
@@ -51,7 +51,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
     "@capacitor/cli": "4.7.1",
-    "@ionic/angular-toolkit": "^8.0.0",
+    "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
@@ -71,8 +71,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.8.4"
   },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {}
-  }
+  "description": "An Ionic project"
 }
