--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@capacitor/android": "4.7.1",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.1",
-    "@capacitor/haptics": "^4.1.0",
-    "@capacitor/ios": "4.7.1",
-    "@capacitor/keyboard": "4.1.1",
-    "@capacitor/preferences": "^4.0.2",
-    "@capacitor/share": "^4.1.1",
-    "@capacitor/splash-screen": "^4.2.0",
-    "@capacitor/status-bar": "4.1.1",
-    "@capacitor/text-zoom": "^4.1.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/preferences": "^5.0.0",
+    "@capacitor/share": "^5.0.0",
+    "@capacitor/splash-screen": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
+    "@capacitor/text-zoom": "^5.0.0",
+    "@capawesome/capacitor-app-update": "^5.0.0",
     "@ionic/angular": "^6.1.9",
     "airtable": "^0.11.6",
     "axios": "^1.3.5",
@@ -52,7 +53,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
     "@capacitor/assets": "^2.0.4",
-    "@capacitor/cli": "4.7.1",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
