--- a/package.json
+++ b/package.json
@@ -74,5 +74,13 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.8.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "browserslist": [
+    "Chrome >=60",
+    "ChromeAndroid >=60",
+    "Firefox >=63",
+    "Edge >=79",
+    "Safari >=13",
+    "iOS >=13"
+  ]
 }
