--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2022",
     "module": "es2020",
     "lib": [
       "es2018", 
