--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@airtable/blocks": "^1.16.0",
+    "@angular/animations": "^15.2.9",
     "@angular/cdk": "^15.2.4",
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0",
