--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@capacitor/android": "^5.0.0",
-    "@capacitor/app": "^5.0.0",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/haptics": "^5.0.0",
-    "@capacitor/ios": "^5.0.0",
-    "@capacitor/keyboard": "^5.0.0",
-    "@capacitor/preferences": "^5.0.0",
-    "@capacitor/share": "^5.0.0",
-    "@capacitor/splash-screen": "^5.0.0",
-    "@capacitor/status-bar": "^5.0.0",
-    "@capacitor/text-zoom": "^5.0.0",
-    "@capawesome/capacitor-app-update": "^5.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
+    "@capacitor/share": "^6.0.0",
+    "@capacitor/splash-screen": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
+    "@capacitor/text-zoom": "^6.0.0",
+    "@capawesome/capacitor-app-update": "6.1.0",
     "@ionic/angular": "^6.1.9",
     "airtable": "^0.11.6",
     "axios": "^1.3.5",
@@ -54,7 +54,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
     "@capacitor/assets": "^2.0.4",
-    "@capacitor/cli": "^5.0.0",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
