Add deep link support for hymns in app
Implemented deep link handling for both universal links (https) and custom URL scheme (sdahymnal) on Android and iOS. Updated AndroidManifest.xml and Info.plist to register intent filters and URL types. Modified app.component.ts to parse incoming URLs and navigate to the appropriate hymn detail page. Updated capacitor.config.json with relevant app and scheme configuration. Also incremented Android version and added baseline profiles.

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,3 +1,21 @@
 {
-  "xcodeProjectName": "SDA Kinyarwanda Hymnal"
+  "appId": "com.devseb.sdaKinyarwandaHymnal",
+  "appName": "SDA Kinyarwanda Hymnal",
+  "webDir": "www",
+  "server": {
+    "url": "https://sda-kinyarwanda-hymnal.vercel.app",
+    "cleartext": true
+  },
+  "plugins": {
+    "App": {
+      "launchUrl": "https://sda-kinyarwanda-hymnal.vercel.app"
+    }
+  },
+  "ios": {
+    "scheme": "sdahymnal",
+    "xcodeProjectName": "SDA Kinyarwanda Hymnal"
+  },
+  "android": {
+    "scheme": "sdahymnal"
+  }
 }
